# TEngine

./: Backup.txt  CMakeLists.txt  CMakeLists.txt.backup  build.cmd  build.sh  commit.sh  copy_shader.sh  history.patch  install_deps.sh  log.txt  out.txt  readme.txt  reset_settings.sh  run.cmd  run.sh
docs/: Development Documentation.docx  Development Documentation.odt
linux_build/: CMakeCache.txt  Capture.cap  Capture2.rdc  Makefile  cmake_install.cmake  imgui.ini  shader.vert.glsl
res/: logo.hpp
src/: BuildDate.h  Main.cpp  libs.hpp  txt.txt
win_build/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  imgui.ini  output.mtl
